# ppgca-cd-2026

./: .env.example  .gitignore  README.md  pyproject.toml
data/control/: hashes.json  watermark.json
notebooks/: eda_qualidade.html  eda_qualidade.qmd
reports/: report.ipynb
src/: ingest.py  transform.py  util.py
